[BUGFIX] Correct placement of main navigation dropdowns on small viewports - fixes #561, #565

--- a/Resources/Public/Css/bootstrap4-rte.css
+++ b/Resources/Public/Css/bootstrap4-rte.css
@@ -10492,7 +10492,7 @@ blockquote footer::before {
     display: inline-block;
   }
   .navbar-mainnavigation .dropdown-menu {
-    position: relative;
+    position: static;
     margin-left: -20px;
     margin-right: -20px;
     border: none;
